@@ -7,6 +7,8 @@ xxxx/xx/xx
  - #5677, ST_Union(geom[]) should unary union single entry arrays (Paul Ramsey)
  - #5679, Remove spurious COMMIT statements from sfcgal script
           (Sandro Santilli, Loïc Bartoletti)
+ - #5680, Fix populate_topology_layer with standard_conforming_strings
+          set to off (Sandro Santilli)
 
 
 PostGIS 3.3.6
